--- a/5May/mutliview/views/contactus.html
+++ b/5May/mutliview/views/contactus.html
@@ -1,29 +1,20 @@
-<!DOCTYPE html>
-<html ng-app="xyz">
-	<head>
-		<link href="css/bootstrap.min.css" rel="stylesheet" />
-		<link href="css/bootstrap-theme.min.css" rel="stylesheet" />
-		<title>{{x+90}}</title>
-		<style>
-			input.ng-valid.ng-touched{
-				border:1px solid green;
-			}
-			input.ng-invalid.ng-touched{
-				border:1px solid red;
-			}
-		</style>
-	</head>
-	<body>
-		<section class="container" ng-controller="AbcController">
-			<div class="row">
-			<form name="contactForm" role="form" ng-submit="contactForm.$valid && myfun2()" novalidate>
+<h1>Contact Page</h1>
+
+{{ 4 + 5 }}
+
+
+<form name="contactForm" role="form" ng-submit="contactForm.$valid && myfun2()" novalidate>
 				<div class="col-md-6 col-md-offset-3">
 					<div class="form-group">	
 						<label>Name</label>
 						<input name="name" class="form-control" ng-model="contact.name" minlength="3" required>
-						<span class="text-danger" ng-show="(contactForm.$submitted || contactForm.name.$touched) && contactForm.name.$error.required">Name is required</span>
 						
-						<span class="text-danger" ng-show="contactForm.name.$touched && contactForm.name.$error.minlength">Name should atleast contain 3 letters.</span>
+						<span ng-show="contactForm.$submitted || contactForm.name.$touched" class="text-danger text-sm" ng-messages="contactForm.name.$error">
+							<span ng-message="required">Name is required</span>
+							<span ng-message="minlength">Name should atleast contain 3 letters.</span>
+						</span>
+						
+						
 					</div>
 					<div class="form-group">
 						<label>Phone</label>
@@ -47,13 +38,3 @@
 					</pre>
 				</div>
 			</form>
-			</div>
-		</section>
-		
-		<script src="js/jquery.min.js"></script>
-		<script src="js/bootstrap.min.js"></script>
-		<script src="js/angular.min.js"></script>
-		<script src="js/app.js"></script>
-		
-	</body>
-</html>
